# celestial_sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  energy_log_preset_500yearEARTHRK4.csv  energy_log_preset_PRES0BOD#-1.csv  scalability_curve_results_NOCOLLISIONS.csv  scalability_curve_results_WITHCOLLISIONS.csv  source.cpp
logs/: SAP_WITHCOLLISIONS.csv  earth_stress_test_LF.csv  earth_stress_test_RK4.csv  energy_log_preset_PRES1BOD#100.csv  scalability_curve_results_NOCOLLISIONS.csv  scalability_curve_results_WITHCOLLISIONS.csv
src/: TimeManager.cpp  TimeManager.h  body.cpp  body.h  main.cpp  simulation.cpp  simulation.h
src/headers/: Application.h  CameraController.h  InputHandler.h  Sidebar.h  ThreadPool.h  TimeManager.h  benchmark.h  body.h  simulation.h
src/source/: Application.cpp  CameraController.cpp  InputHandler.cpp  Sidebar.cpp  ThreadPool.cpp  TimeManager.cpp  benchmark.cpp  body.cpp  main.cpp  simulation.cpp
src/utils/: QuadTree.cpp  QuadTree.h  Vec.h  constants.h  energy_grapher.py
src/utils/scripts/: energy_grapher.py  perfVerr.py  plot_single.py  plot_thermodynamics.py  scalability.py
